# Calcul-Neuromorphique

./: .gitignore  README.md
.devcontainer/: devcontainer.json
TP/: main.py  pyproject.toml
TP/docs/diagrams/src/: base.puml
TP/src/: test.py  test1.py  tp1.py  tp3.py
TP/src/neuromorphic/: __init__.py  enregistrement.py  etat_neurone.py  integrateur.py  lif_stdp.py  neurone.py  neurone_update_strategy.py  normalisateur.py  plotting.py  reseau.py  simulation.py
TP/src/neuromorphic_v2/: __init__.py  neuron.py
