[project]
name = "neuromorphic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Elhadji Moussa FAYE", email = "moussafaye.m@gmail.com" }
]

requires-python = ">=3.10"

dependencies = [
    "matplotlib",
    "numpy",
    "networkx",
    "typing-extensions",
    "aedat",
    "tqdm"
]

[project.scripts]
tp1 = "tp1:main"
tp2 = "tp2:main"
tp3 = "tp3:main"
test = "test:main"
test1 = "test1:main"
neurone_old = "neuromorphic.neurone:main"
neurone_new = "neuromorphic_v2.neuron:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
